--- a/src/modules/settings/_user_settings.scss
+++ b/src/modules/settings/_user_settings.scss
@@ -344,6 +344,15 @@
         }
     }
 
+    // Voice & Video
+    .userSettingsVoice-1fEtsL{
+        // Fixes no spacing between video background and advanced sections
+        .title-3hptVQ.marginBottom20-315RVT{
+            margin-top: 24px;
+            background-color: red;
+        }
+    }
+
     // Keybinds
     // Warning
     .container-3jbRo5.warning-RBGtx2{
